# data-engineer-constellation

./: .gitignore  AGENTS.md  Makefile  NOTE.md  README.md  docker-compose.yml
camair-api/: .gitignore  main.py  pyproject.toml
camair-etl/: .gitignore  README.md  pyproject.toml
camair-etl/src/elt/: extractors.py
camair-web/: package.json  vite.config.ts
camair-web/src/config/: pollutant.config.ts
camair-web/src/layout/: DashboardLayout.tsx  Header.tsx  Sidebar.tsx
camair-web/src/pages/: Calendar.tsx  Home.tsx  Settings.tsx  Tasks.tsx  WeatherDashboard.tsx
etl/: .airflowignore
etl/docker/: init-db.sh
etl/src/elt/: config.py
projects/I4S2-TP08-sales-analysis-project/: README.md  main.py  pyproject.toml
projects/_template/: README.md  pyproject.toml
projects/camair/: AGENTS.md  Makefile  NOTE.md  PROJECT_GUIDE.md  README.md  docker-compose.camair.yml
projects/camair/api/: .env.template  .gitignore  Dockerfile  config.py  database.py  main.py  manager.py  models.py  pyproject.toml  requirements.txt  schemas.py  worker.py
projects/camair/api/app/: main.py
projects/camair/api/app/api/v1/: api.py
projects/camair/api/app/api/v1/endpoints/: environmental.py  provinces.py
projects/camair/api/app/core/: config.py  database.py
projects/camair/api/app/models/: environmental.py  province.py
projects/camair/api/app/schemas/: common.py  environmental.py  province.py
projects/camair/api/app/websocket/: worker.py
projects/camair/api/routers/: environmental.py  provinces.py
web/: index.html  package-lock.json
web/src/: App.tsx  index.css
(+96 files in other folders)
