[project]
name = "camair-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.50",
    "uvicorn[standard]>=0.42.0",
    "geoalchemy2>=0.14.0",
    "pydantic-settings>=2.2.1",
]
